--- a/src/Template/cup/publication/category/index.twig
+++ b/src/Template/cup/publication/category/index.twig
@@ -28,10 +28,10 @@
                         {% block thead %}
                             <tr>
                                 <th>Название</th>
-                                <th width="15%">Категория</th>
-                                <th width="7%">Публичная</th>
-                                <th width="7%">Вложенные</th>
-                                <th width="15%" class="text-center"></th>
+                                <th width="25%">Категория</th>
+                                <th width="7%" class="d-none d-md-table-cell">Публичная</th>
+                                <th width="7%" class="d-none d-md-table-cell">Вложенные</th>
+                                <th width="25%" class="text-right"></th>
                             </tr>
                         {% endblock %}
 
@@ -39,14 +39,14 @@
                             {% for item in list.sortBy('title') %}
                                 <tr>
                                     <td>{{ item.title }}</td>
-                                    <td width="15%">{{ list.where('uuid', item.parent).first().title ?? '&mdash;' }}</td>
-                                    <td width="7%" class="text-center" data-order="{{ item.public }}">
+                                    <td width="25%">{{ list.where('uuid', item.parent).first().title ?? '&mdash;' }}</td>
+                                    <td width="7%" class="d-none d-md-table-cell text-center" data-order="{{ item.public }}">
                                         {{ item.public ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
                                     </td>
-                                    <td width="7%" class="text-center" data-order="{{ item.children }}">
+                                    <td width="7%" class="d-none d-md-table-cell text-center" data-order="{{ item.children }}">
                                         {{ item.children ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
                                     </td>
-                                    <td width="15%" class="text-center">
+                                    <td width="25%" class="text-right">
                                         <form action="/cup/publication/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию публикаций?');">
                                             <div class="btn-group">
                                                 <a href="/cup/publication/category/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
