--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -17,7 +17,7 @@
             <div class="card">
                 <form method="post">
                     <div class="card-header">
-                        <ul class="nav nav-pills nav-secondary nav-pills-no-bd" role="tablist">
+                        <ul class="nav nav-pills nav-secondary nav-pills-no-bd justify-content-center" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active show" data-toggle="pill" href="#common" role="tab">
                                     {{ 'Общие'|locale }}
