--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -96,11 +96,11 @@
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
                             <tr>
-                                <th width="15%">Логин</th>
+                                <th width="20%">Логин</th>
                                 <th>Фамилия и имя</th>
-                                <th width="15%">Группа</th>
-                                <th width="15%">Дата регистрации / посещения</th>
-                                <th width="15%" class="text-center"></th>
+                                <th width="15%" class="d-none d-md-table-cell">Группа</th>
+                                <th width="15%" class="d-none d-md-table-cell">Дата регистрации /<br> посещения</th>
+                                <th width="25%" class="text-right"></th>
                             </tr>
                         {% endblock %}
 
@@ -117,7 +117,7 @@
                                             )
                                         }}
                                     ">
-                                        <td width="15%" data-order="{{ user.username }}">{{ user.username ?: '<code>Без логина</code>'|raw }}</td>
+                                        <td width="20%">{{ user.username ?: '<code>Без логина</code>'|raw }}</td>
                                         <td>
                                             {{ user.getName() ?: '<code>Без имени</code>'|raw }}
                                             {{ user.getEmail() ? ('<br>' ~ user.getEmail())|raw : '' }}
@@ -131,12 +131,12 @@
                                                 {% endif %}
                                             </div>
                                         </td>
-                                        <td width="15%">{{ user.group.title ?? '<code>Без группы</code>' }}</td>
-                                        <td width="15%" data-order="{{ user.session.date.getTimestamp() }}">
+                                        <td width="15%" class="d-none d-md-table-cell">{{ user.group.title ?? '<code>Без группы</code>' }}</td>
+                                        <td width="15%" class="d-none d-md-table-cell">
                                             {{ user.register|df('d.m.Y H:i:s') }}
                                             {{ user.session.date ? ('/<br>' ~ user.session.date|df('d.m.Y H:i:s'))|raw : '' }}
                                         </td>
-                                        <td width="15%" class="text-center">
+                                        <td width="25%" class="text-right">
                                             <form action="/cup/user/{{ user.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить пользователя?');">
                                                 <div class="btn-group">
                                                     <a href="/cup/user/{{ user.uuid }}/edit" class="btn btn-sm btn-info">
