--- a/src/Template/mixin/datatable.twig
+++ b/src/Template/mixin/datatable.twig
@@ -13,18 +13,18 @@
 </div>
 
 <div data-table="{{ tableId }}" class="clusterize">
-    <table class="table table-striped table-hover w-100">
-        <thead>
+    <table class="table table-striped table-hover mb-0" style="table-layout:fixed; width: 100%">
+        <thead class="text-nowrap">
             {% block thead %}
                 <tr class="clusterize-no-data">
-                    <th>Empty headers</th>
+                    <th>{{ 'Нет заголовков'|locale }}</th>
                 </tr>
             {% endblock %}
         </thead>
     </table>
     <div data-table-scroll="{{ tableId }}" class="clusterize-scroll" style="max-height: 50vh!important; overflow: auto;">
-        <table class="table table-striped table-hover w-100">
-            <tbody data-table-content="{{ tableId }}" class="clusterize-content" style="display: none;">
+        <table class="table table-striped table-hover mb-0" style="table-layout:fixed; width: 100%">
+            <tbody data-table-content="{{ tableId }}" class="clusterize-content text-nowrap" style="display: none;">
                 {% block tbody %}
                     <tr class="clusterize-no-data">
                         <td>{{ 'Нет данных'|locale }}</td>
@@ -34,6 +34,13 @@
         </table>
     </div>
 </div>
+
+<style>
+    tbody .form-group,
+    tbody .form-check {
+        padding: 10px 0;
+    }
+</style>
 
 <script type="text/javascript">
     let $rows;
@@ -56,6 +63,7 @@
             contentElem: $content.show().get(0),
             rows_in_block: 10,
             blocks_in_cluster: 3,
+            no_data_text: '{{ 'Нет данных'|locale }}'
         });
 
         $('[data-table-search="{{ tableId }}"]').on('keyup', (e) => {
